--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "sass": "^1.69.5",
     "svelte": "^4.0.5",
+    "svelte-hero-icons": "^5.0.0",
     "svelte-preprocess": "^5.1.0",
+    "svelte-window": "^1.2.5",
     "vite": "^4.4.5"
   },
   "dependencies": {
